Darken cards, fix footer spacing

--- a/hwsite/static/css/theme.css
+++ b/hwsite/static/css/theme.css
@@ -1,14 +1,34 @@
-.btn, .card, .page-item {
+.btn, .card, .page-item, .modal-content {
     border-radius: 0;
 }
 
 a:not(.navbar-brand):not(.nav-link) {
     color: black;
-    border-bottom: 1px solid #000;
-    text-transform: uppercase;
 }
 
 a:not(.navbar-brand):not(.nav-link):hover {
-    text-decoration: none;
     color: #6b9430;
+}
+
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+body {
+    position: relative;
+    margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
+}
+
+footer {
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
+.bg-light {
+    filter: brightness(95%);
 }
